samples/_failures_safe/1761452170_c28633_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3a92047.c: In function ‘main’:
./samples/SAFE/__tmp_e3a92047.c:168:5: error: expected declaration or statement at end of input
  168 |     return 0;
      |     ^~~~~~
